syntax = "proto3";

option go_package = "v2";
option java_package = "io.stackrox.proto.api.v2";

import "google/protobuf/timestamp.proto";
import "api/v2/common.proto";
import "api/v2/search_query.proto";
import weak "google/api/annotations.proto";
import "api/v2/report_configuration_service.proto";

package v2;

message GetReportHistoryRequest {
    string   report_config_id  = 1;
    RawQuery query             = 2;
}

enum ImageType {
    DEPLOYED = 0;
    WATCHED  = 1;
}

message SlimUser {
    string id   = 1;
    string name = 2;
}

message CollectionSnapshot {
    string id   = 1;
    string name = 2;
}

message ReportSnapshot {

    string                    id                           = 1;
    string                    name                         = 2;
    string                    description                  = 3;
    oneof                     filter {
        VulnerabilityReportFilters  vuln_report_filters   = 5;
    }
    CollectionSnapshot         collection_snapshot        = 6;
    ReportSchedule                   schedule                   = 7;
    ReportStatus               report_status              = 8;
    repeated NotifierConfiguration notifiers                   = 9;
    SlimUser                  user                        = 10;
}

message ReportHistoryResponse {
    repeated ReportSnapshot report_snapshots = 1;
}

message ReportStatus {
    enum RunState {
        WAITING   = 0;
        PREPARING = 1;
        SUCCESS   = 2;
        FAILURE   = 3;
    }

    enum ReportMethod {
        ON_DEMAND = 0;
        SCHEDULED = 1;
    }

    enum NotificationMethod {
        UNSET = 0;
        EMAIL = 1;
        DOWNLOAD = 2;
    }

    RunState                   run_state       = 1;
    google.protobuf.Timestamp  completed_at        = 2;
    string                     error_msg       = 3;
    ReportMethod               report_request_type   = 4;
    NotificationMethod         report_notification_method = 5;
}

service ReportService {

    // GetReportStatus returns report status
    rpc GetReportStatus (ResourceByID) returns (ReportStatus) {
        option (google.api.http) = {
            get: "/v2/reports/status/{id}"
        };
    }
    // GetReportStatusConfigID returns report status for a report config id
    rpc GetLastReportStatusConfigID (ResourceByID) returns (ReportStatus) {
        option (google.api.http) = {
            get: "/v2/reports/last-status/{id}"
        };
    }

    // GetReportHistory returns the full history for a report configurated with the specified ID.
    rpc GetReportHistory(GetReportHistoryRequest) returns (ReportHistoryResponse) {
        option (google.api.http) = {
            get: "/v2/reports/history"
        };
    }

}
